test/Fail/Issue3131.agda

data A : Set₁ → Set where
  C : (S : Set₁) → A S
